feat: add inner banner region and new templates for about and header title

--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,19 @@
         "drupal/admin_toolbar": "^3.5",
         "drupal/better_exposed_filters": "^7.0",
         "drupal/bootstrap": "^5.0",
+        "drupal/ckeditor5_line_height": "^1.2",
+        "drupal/ckeditor5_plugin_pack": "^1.4",
         "drupal/config_pages": "^2.18",
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
+        "drupal/easy_breadcrumb": "^2.0",
         "drupal/field_group": "^4.0",
         "drupal/form_mode_manager": "^3.1",
         "drupal/image_class": "^2.0",
         "drupal/module_filter": "^5.0",
         "drupal/office_hours": "^1.17",
+        "drupal/paragraphs": "^1.19",
         "drupal/quick_node_clone": "^1.22",
         "drupal/simplify_menu": "^3.3",
         "drupal/smart_trim": "^2.2",
