--- a/web/themes/custom/theme_sdd/theme_sdd.info.yml
+++ b/web/themes/custom/theme_sdd/theme_sdd.info.yml
@@ -13,6 +13,7 @@ libraries-override:
 regions:
   header: 'Header'
   banner: 'Banner'
+  inner_banner: 'Inner Banner'
   primary_menu: 'Primary menu'
   secondary_menu: 'Secondary menu'
   page_top: 'Page top'
