--- a/config/sync/block.block.theme_sdd_headertitle.yml
+++ b/config/sync/block.block.theme_sdd_headertitle.yml
@@ -22,4 +22,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/about/leadership-message\r\n/node/32"
+    pages: "/about/leadership-message\r\n/node/32\r\n/services"
