--- a/config/sync/core.entity_view_display.node.leadership_message.default.yml
+++ b/config/sync/core.entity_view_display.node.leadership_message.default.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.leadership_message.body
+    - field.field.node.leadership_message.field_attachment
     - field.field.node.leadership_message.field_designation
     - field.field.node.leadership_message.field_dm_name
     - field.field.node.leadership_message.field_image
     - image.style.wide
     - node.type.leadership_message
   module:
+    - file
     - svg_image
     - text
     - user
@@ -24,6 +26,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 101
+    region: content
+  field_attachment:
+    type: file_default
+    label: above
+    settings:
+      use_description_as_link_text: true
+    third_party_settings: {  }
+    weight: 102
     region: content
   field_designation:
     type: string
