--- a/config/sync/block.block.theme_sdd_headertitle_2.yml
+++ b/config/sync/block.block.theme_sdd_headertitle_2.yml
@@ -25,4 +25,5 @@ visibility:
     context_mapping:
       node: '@node.node_route_context:node'
     bundles:
+      custom_page: custom_page
       our_strategy: our_strategy
