--- a/config/sync/views.view.services.yml
+++ b/config/sync/views.view.services.yml
@@ -6,9 +6,6 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - node.type.services
     - taxonomy.vocabulary.services
-  content:
-    - 'taxonomy_term:services:279d643e-4c20-46e2-898c-7de221a3ba8e'
-    - 'taxonomy_term:services:280534b1-291a-4821-86f8-17690fbf419d'
   module:
     - better_exposed_filters
     - node
@@ -374,6 +371,40 @@ display:
     position: 1
     display_options:
       title: Services
+      arguments:
+        field_services_type_target_id:
+          id: field_services_type_target_id
+          table: node__field_services_type
+          field: field_services_type_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: entity_target_id
+          default_action: ignore
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: node
+          default_argument_options: {  }
+          summary_options:
+            base_path: ''
+            count: true
+            override: false
+            items_per_page: 25
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
       filters:
         status:
           id: status
@@ -436,55 +467,6 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-        field_services_type_target_id:
-          id: field_services_type_target_id
-          table: node__field_services_type
-          field: field_services_type_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: taxonomy_index_tid
-          operator: or
-          value:
-            5: 5
-          group: 1
-          exposed: false
-          expose:
-            operator_id: field_services_type_target_id_op
-            label: ''
-            description: ''
-            use_operator: false
-            operator: field_services_type_target_id_op
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: service_type
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              content_editor: '0'
-              administrator: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          vid: services
-          type: select
-          hierarchy: false
-          limit: true
-          error_message: true
         keys:
           id: keys
           table: node_search_index
@@ -533,6 +515,7 @@ display:
       defaults:
         title: false
         use_ajax: false
+        arguments: false
         filters: false
         filter_groups: false
         header: false
@@ -726,57 +709,10 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-        field_services_type_target_id_1:
-          id: field_services_type_target_id_1
-          table: node__field_services_type
-          field: field_services_type_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: taxonomy_index_tid
-          operator: or
-          value:
-            4: 4
-          group: 2
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          vid: services
-          type: select
-          hierarchy: false
-          limit: true
-          error_message: true
       filter_groups:
         operator: OR
         groups:
           1: AND
-          2: AND
       defaults:
         title: false
         use_ajax: false
