feat: add new template for media images teaser and update block structure

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/svg_image": "^3.2",
         "drupal/twig_tweak": "^3.4",
         "drupal/vch": "^1.0",
+        "drupal/yearonly": "^9.1",
         "drush/drush": "^12.5"
     },
     "conflict": {
