--- a/config/sync/block.block.theme_sdd_views_block__news_recent_block.yml
+++ b/config/sync/block.block.theme_sdd_views_block__news_recent_block.yml
@@ -1,24 +1,24 @@
-uuid: 94c2b3a1-cb7f-4685-a177-b8e039b013d0
+uuid: d9b1717e-63ae-4f68-9cfd-9eb5a18e016b
 langcode: en
 status: true
 dependencies:
   config:
-    - views.view.leadership_message
+    - views.view.news
   module:
     - system
     - views
   theme:
     - theme_sdd
-id: theme_sdd_views_block__leadership_message_list
+id: theme_sdd_views_block__news_recent_block
 theme: theme_sdd
 region: content
-weight: -5
+weight: -3
 provider: null
-plugin: 'views_block:leadership_message-list'
+plugin: 'views_block:news-recent_block'
 settings:
-  id: 'views_block:leadership_message-list'
+  id: 'views_block:news-recent_block'
   label: ''
-  label_display: visible
+  label_display: '0'
   provider: views
   views_label: ''
   items_per_page: none
@@ -26,4 +26,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/media-kit\r\n/node/52"
+    pages: /media-center
