--- a/config/sync/core.entity_form_display.node.media_images.default.yml
+++ b/config/sync/core.entity_form_display.node.media_images.default.yml
@@ -1,29 +1,25 @@
-uuid: 12e46d1b-7355-4aa3-905f-7bcf6b7c2ba5
+uuid: b46a95bd-7005-4c5a-8ef8-5eef43f59485
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.news.body
-    - field.field.node.news.field_image
-    - field.field.node.news.field_sh_date
-    - field.field.node.news.field_sh_images
-    - field.field.node.news.field_year
+    - field.field.node.media_images.body
+    - field.field.node.media_images.field_banner
+    - field.field.node.media_images.field_sh_images
     - image.style.thumbnail
-    - node.type.news
+    - node.type.media_images
   module:
-    - datetime
     - path
     - svg_image
     - text
-    - yearonly
-id: node.news.default
+id: node.media_images.default
 targetEntityType: node
-bundle: news
+bundle: media_images
 mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 5
+    weight: 121
     region: content
     settings:
       rows: 9
@@ -33,84 +29,76 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_image:
+  field_banner:
     type: image_image
-    weight: 1
+    weight: 4
     region: content
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
-    third_party_settings: {  }
-  field_sh_date:
-    type: datetime_default
-    weight: 4
-    region: content
-    settings: {  }
     third_party_settings: {  }
   field_sh_images:
     type: image_image
-    weight: 2
+    weight: 12
     region: content
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
-  field_year:
-    type: yearonly_default
-    weight: 26
-    region: content
-    settings:
-      sort_order: asc
-    third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 3
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 8
+    weight: 15
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 11
+    weight: 120
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 9
+    weight: 16
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: -5
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  translation:
+    weight: 10
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
