--- a/config/sync/core.entity_view_display.node.media_images.default.yml
+++ b/config/sync/core.entity_view_display.node.media_images.default.yml
@@ -1,24 +1,20 @@
-uuid: bda990d8-972d-453b-a489-05b89b8a84f2
+uuid: a11d378a-2c6c-414a-9f21-68564ce72129
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.news.body
-    - field.field.node.news.field_image
-    - field.field.node.news.field_sh_date
-    - field.field.node.news.field_sh_images
-    - field.field.node.news.field_year
-    - node.type.news
+    - field.field.node.media_images.body
+    - field.field.node.media_images.field_banner
+    - field.field.node.media_images.field_sh_images
+    - node.type.media_images
   module:
-    - datetime
     - image_class
     - svg_image
     - text
     - user
-    - yearonly
-id: node.news.default
+id: node.media_images.default
 targetEntityType: node
-bundle: news
+bundle: media_images
 mode: default
 content:
   body:
@@ -28,23 +24,18 @@ content:
     third_party_settings: {  }
     weight: 101
     region: content
-  field_image:
+  field_banner:
     type: image
     label: hidden
     settings:
       image_link: ''
-      image_style: wide
+      image_style: ''
       image_loading:
-        attribute: eager
-    third_party_settings: {  }
-    weight: -1
-    region: content
-  field_sh_date:
-    type: datetime_default
-    label: above
-    settings:
-      timezone_override: ''
-      format_type: medium
+        attribute: lazy
+      svg_attributes:
+        width: null
+        height: null
+      svg_render_as_image: true
     third_party_settings: {  }
     weight: 102
     region: content
@@ -64,13 +55,6 @@ content:
       image_class:
         class: 'w-full h-full object-cover'
     weight: 103
-    region: content
-  field_year:
-    type: yearonly_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 104
     region: content
   links:
     settings: {  }
