--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.news.field_image
     - field.field.node.news.field_sh_date
     - field.field.node.news.field_sh_images
+    - field.field.node.news.field_year
     - node.type.news
   module:
     - datetime
@@ -54,4 +55,5 @@ content:
     region: content
 hidden:
   field_sh_images: true
+  field_year: true
   langcode: true
