--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -3,9 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.grid
     - core.entity_view_mode.node.teaser
     - node.type.news
   module:
+    - better_exposed_filters
     - node
     - user
     - vch
@@ -187,24 +189,259 @@ display:
     display_plugin: page
     position: 1
     display_options:
-      title: News
+      title: 'News Room'
+      exposed_form:
+        type: bef
+        options:
+          submit_button: Apply
+          reset_button: true
+          reset_button_label: Reset
+          exposed_sorts_label: 'Sort by'
+          expose_sort_order: true
+          sort_asc_label: Asc
+          sort_desc_label: Desc
+          text_input_required: 'Select any filter and click on Apply to see results'
+          text_input_required_format: full_html
+          bef:
+            general:
+              autosubmit: false
+              autosubmit_exclude_textfield: false
+              autosubmit_textfield_delay: 500
+              autosubmit_textfield_minimum_length: 3
+              autosubmit_hide: true
+              input_required: false
+              allow_secondary: false
+              secondary_label: 'Advanced options'
+              secondary_open: false
+              reset_button_always_show: false
+            filter:
+              field_year_value:
+                plugin_id: default
+                advanced:
+                  placeholder_text: ''
+                  collapsible: false
+                  collapsible_disable_automatic_open: false
+                  is_secondary: false
+                  hide_label: false
+              created:
+                plugin_id: bef_datepicker
+                advanced:
+                  placeholder_text: ''
+                  collapsible: false
+                  collapsible_disable_automatic_open: false
+                  is_secondary: false
+                  hide_label: false
+      filters:
+        status:
+          id: status
+          table: node_field_data
+          field: status
+          entity_type: node
+          entity_field: status
+          plugin_id: boolean
+          value: '1'
+          group: 1
+          expose:
+            operator: ''
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          value:
+            news: news
+        field_year_value:
+          id: field_year_value
+          table: node__field_year
+          field: field_year_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: numeric
+          operator: '='
+          value:
+            min: ''
+            max: ''
+            value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_year_value_op
+            label: 'Year (field_year)'
+            description: ''
+            use_operator: false
+            operator: field_year_value_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_year_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              content_editor: '0'
+              administrator: '0'
+            min_placeholder: ''
+            max_placeholder: ''
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
       style:
         type: clean_html_style
         options:
-          row_class: 'group-[:not(.list)]/layout:mb-10 w-full group-[.list]/layout:flex-col md:group-[.list]/layout:flex-row  group-[.list]/layout:fle'
+          row_class: ''
           uses_fields: false
-          wrapper_class: 'flex group-[:not(.list)]/layout:flex-col  group-[.list]/layout:flex-col md:group-[.list]/layout:flex-row  group-[.list]/layout:g'
+          wrapper_class: ' group-[:not(.list)]/layout:grid group-[.list]/layout:space-y-10 gap-x-10 gap-y-12 md:grid-cols-2 lg:grid-cols-3'
       row:
         type: 'entity:node'
         options:
-          view_mode: teaser
+          relationship: none
+          view_mode: grid
       defaults:
         title: false
+        exposed_form: false
         style: false
         row: false
+        filters: false
+        filter_groups: false
       display_description: ''
       display_extenders: {  }
-      path: news
+      path: media-center/news
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
+  recent_block:
+    id: recent_block
+    display_title: 'Recent News'
+    display_plugin: block
+    position: 1
+    display_options:
+      title: 'Recent News'
+      exposed_form:
+        type: bef
+        options:
+          submit_button: Apply
+          reset_button: true
+          reset_button_label: Reset
+          exposed_sorts_label: 'Sort by'
+          expose_sort_order: true
+          sort_asc_label: Asc
+          sort_desc_label: Desc
+          text_input_required: 'Select any filter and click on Apply to see results'
+          text_input_required_format: full_html
+          bef:
+            general:
+              autosubmit: false
+              autosubmit_exclude_textfield: false
+              autosubmit_textfield_delay: 500
+              autosubmit_textfield_minimum_length: 3
+              autosubmit_hide: true
+              input_required: false
+              allow_secondary: false
+              secondary_label: 'Advanced options'
+              secondary_open: false
+              reset_button_always_show: false
+            filter:
+              field_year_value:
+                plugin_id: default
+                advanced:
+                  placeholder_text: ''
+                  collapsible: false
+                  collapsible_disable_automatic_open: false
+                  is_secondary: false
+                  hide_label: false
+              created:
+                plugin_id: bef_datepicker
+                advanced:
+                  placeholder_text: ''
+                  collapsible: false
+                  collapsible_disable_automatic_open: false
+                  is_secondary: false
+                  hide_label: false
+      filters:
+        status:
+          id: status
+          table: node_field_data
+          field: status
+          entity_type: node
+          entity_field: status
+          plugin_id: boolean
+          value: '1'
+          group: 1
+          expose:
+            operator: ''
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          value:
+            news: news
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      style:
+        type: clean_html_style
+        options:
+          row_class: ''
+          uses_fields: false
+          wrapper_class: ' group-[:not(.list)]/layout:grid group-[.list]/layout:space-y-10 gap-x-10 gap-y-12 md:grid-cols-2 lg:grid-cols-3'
+      row:
+        type: 'entity:node'
+        options:
+          relationship: none
+          view_mode: grid
+      defaults:
+        title: false
+        exposed_form: false
+        style: false
+        row: false
+        filters: false
+        filter_groups: false
+        header: false
+      display_description: ''
+      header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: text
+          empty: false
+          content:
+            value: "<div class=\"mb-8 flex flex-wrap items-center justify-between gap-8\">\r\n            <h2 class=\"text-4xl\">Recent News</h2>\r\n\r\n            <a href=\"\" class=\"group/btn relative inline-flex h-[51px] flex-shrink-0 rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange\">\r\n              <span class=\" \"> Discover more </span>\r\n\r\n              <span class=\"absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange\">\r\n                <i class=\"fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white\"></i>\r\n              </span>\r\n            </a>\r\n          </div>"
+            format: full_html
+          tokenize: false
+      display_extenders: {  }
+      block_description: 'Recent News'
     cache_metadata:
       max-age: -1
       contexts:
