--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
+        "drupal/devel": "^5.4",
+        "drupal/devel_php": "^1.7",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/field_group": "^4.0",
         "drupal/form_mode_manager": "^3.1",
@@ -32,12 +34,15 @@
         "drupal/module_filter": "^5.0",
         "drupal/office_hours": "^1.17",
         "drupal/paragraphs": "^1.19",
+        "drupal/pathauto": "^1.13",
         "drupal/quick_node_clone": "^1.22",
+        "drupal/simplenews": "^4.1",
         "drupal/simplify_menu": "^3.3",
         "drupal/smart_trim": "^2.2",
         "drupal/svg_image": "^3.2",
         "drupal/twig_tweak": "^3.4",
         "drupal/vch": "^1.0",
+        "drupal/webform": "^6.2",
         "drupal/yearonly": "^9.1",
         "drush/drush": "^12.5"
     },
